--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -4,7 +4,8 @@ resources:
 - deployment.yaml
 - service.yaml
 images:
-- name: ghcr.io/shclub/edu12-backend
+#- name: ghcr.io/shclub/edu12-backend
+- name: ghcr.io/dragorse/edu12-backend
   newTag: "20230322092639"
 #- name: shclub/edu12-backend
 #  newTag: "20230322080446"
