--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: backend
-        image: ghcr.io/shclub/edu12-backend 
+        #image: ghcr.io/shclub/edu12-backend 
+        image: ghcr.io/dragorse/edu12-backend 
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: "prd"
